--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s UEM<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
 </header>
 <body>
     <div class="caja">
-    <h2 class="titulo">Clubs de la Universidad</h2>
+    <h2 class="titulo">Clubs UEM</h2>
     <h2 class="titulo">Europea de Madrid</h2>
     </div>
 </body>
