--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ s UEM<!DOCTYPE html>
 </header>
 <body>
     <div class="caja">
-    <h2 class="titulo">Clubs UEM</h2>
+    <h2 class="titulo">Clubs Universidad</h2>
     <h2 class="titulo">Europea de Madrid</h2>
     </div>
 </body>
